<resources>
    <string name="app_name">My_UCA</string>
    <string name="title_home">Home</string>
    <string name="title_see">See</string>
    <string name="title_add">Add</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>