<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navegation_see"
        android:icon="@drawable/see"
        android:title="@string/title_see" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/edit"
        android:title="@string/title_edit" />

    <item
        android:id="@+id/navigation_delete"
        android:icon="@drawable/delete"
        android:title="@string/title_delete" />



</menu>